apps/pantheon/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/description: Pantheon Dashboard
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
spec:
  parentRefs:
    - name: pantheon-gateway
      namespace: default
  hostnames:
    - homepage.rm-it.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
